# Personalized-News-Briefing-System

./: FILE_MANIFEST.md  LICENSE  PHASE5_AT_A_GLANCE.md  PHASE5_COMPLETION_REPORT.md  README_PHASE5.md  pyproject.toml  requirements.txt
configs/: app.yaml  logging.yaml  sources.yaml
docker/: docker-compose-prod.yml  prometheus.yml
docs/: API_DOCUMENTATION.md  DEPLOYMENT_RUNBOOK.md  MIDDLEWARE_INTEGRATION.md  PHASE4_COMPLETION.md  PHASE4_INTEGRATION_GUIDE.md  PHASE5_ARCHITECTURE.md  PHASE5_COMPLETION_SUMMARY.md  PHASE5_README.md  phase4_security.md
docs/AI_suupport_progress/: 01_first_steps.docx  02_cline_phase_1.docx  03_chat_vs_copilot.docx  Engineering Specification v1.0.docx  Engineering_Spec_v1.0.txt
src/: __init__.py
src/layer1_settings/: __init__.py  config.py  constants.py  errors.py  logger.py
src/layer2_persistence/: __init__.py  database.py  models.py
src/layer3_safety/: __init__.py  circuit_breaker.py  grounding_checker.py  input_sanitizer.py  rate_limiter.py  resilience.py  retry_logic.py
src/layer4_services/: __init__.py  briefing_service.py  email_service.py  embedder_service.py  ingest_service.py  llm_service.py  retrieval_service.py  user_memory.py
src/layer5_orchestration/: __init__.py  briefing_agent.py  qa_agent.py  state.py
src/layer6_api/: __init__.py  app.py  middleware.py
src/layer7_observability/: __init__.py  evaluator.py  metrics.py  regression_gates.py
src/utils/: __init__.py  hashing.py  text_cleaning.py  time.py
tests/integration/: test_integration_pipeline.py
tests/observability/: test_evaluation_and_metrics.py
(+13 files in other folders)
